# rust_egui

./: Cargo.toml
src/: app.rs  main.rs
