[package]
name = "rust_template_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30.0", features = ["persistence"] }
egui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
anic = 'abort'
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1